Header Font size and color changed

--- a/LoanManagementSystem/Content/Layout2.css
+++ b/LoanManagementSystem/Content/Layout2.css
@@ -77,12 +77,12 @@ body {
 
 
 .navbar-cls-top .navbar-brand {
-    color: #fff;
+    color: #0A4B92;
     background: #cfeee8;
     width: 180px;
     text-align: center;
     height: 75px;
-    font-size: 18px;
+    font-size: 20px;
     letter-spacing: 1px;
     padding-top: 25px;
 }
