--- a/LoanManagementSystem/Views/LoanRepayments/Index.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Index.cshtml
@@ -166,9 +166,9 @@
 
 
                                 <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.LoanRepaymentId }) |
-                                    @Html.ActionLink("Details", "Details", new { id = item.LoanRepaymentId }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.LoanRepaymentId })
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.LoanRepaymentId })
+                                    @*@Html.ActionLink("Details", "Details", new { id = item.LoanRepaymentId }) |*@
+                                    @*@Html.ActionLink("Delete", "Delete", new { id = item.LoanRepaymentId })*@
                                 </td>
                             </tr>
                         }
