--- a/LoanManagementSystem/Views/Executive/Edit.cshtml
+++ b/LoanManagementSystem/Views/Executive/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit Executives";
-    
+
 }
 
 @*<h2>Edit Executives</h2>*@
@@ -10,12 +10,10 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        @*<h4>sdtoUser</h4>*@
-        <hr />
         @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.UserID)                
+        @Html.HiddenFor(model => model.UserID)
         @Html.HiddenFor(model => model.CreatedBy)
         @Html.HiddenFor(model => model.CreatedOn)
         @Html.HiddenFor(model => model.IsDeleted)
@@ -28,67 +26,88 @@
         @Html.HiddenFor(model => model.PermanentContactId)
         @Html.HiddenFor(model => model.UserGroupId)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Code, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Code)
-                @Html.ValidationMessageFor(model => model.Code)
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.UserAddressId)
+        @Html.HiddenFor(model => model.UserAddress.AddressId)
+        @Html.HiddenFor(model => model.UserContactId)
+        @Html.HiddenFor(model => model.Contacts.ContactId)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.FirstName, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FirstName)
-                @Html.ValidationMessageFor(model => model.FirstName)
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.LastName, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LastName)
-                @Html.ValidationMessageFor(model => model.LastName)
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Designation, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Designation)
-                @Html.ValidationMessageFor(model => model.Designation)
-            </div>
-        </div>
+        <div class="col-md-5">
+            @Html.ValidationSummary(true)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Contacts.Telephone1, "Telephone", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Telephone1, new { htmlAttributes = new {  } })
-                @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
+            <div class="form-group">
+
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.Code, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.Code, new { @class = "form-control", @placeholder = "Enter Code" })
+                    @Html.ValidationMessageFor(model => model.Code)
+                </div>
+            </div>
+
+            <div class="form-group">
+
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.FirstName, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.FirstName, new { @class = "form-control", @placeholder = "Enter First Name" })
+                    @Html.ValidationMessageFor(model => model.FirstName)
+                </div>
+            </div>
+            <div class="form-group">
+
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.LastName, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.LastName, new { @class = "form-control", @placeholder = "Enter Last Name" })
+                    @Html.ValidationMessageFor(model => model.LastName)
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.Designation, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.Designation, new { @class = "form-control", @placeholder = "Enter Designation" })
+                    @Html.ValidationMessageFor(model => model.Designation)
+                </div>
             </div>
         </div>
+        <div class="col-md-5">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Contacts.Mobile1, "Mobile", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Mobile1, new { htmlAttributes = new {  } })
-                @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
+            @*<div class="form-group">
+                    @Html.LabelFor(model => model.UserType, new { @class = "control-label" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.UserType)
+                        @Html.ValidationMessageFor(model => model.UserType)
+                    </div>
+                </div>*@
+
+            <div class="form-group">
+
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.Contacts.Telephone1, "Telephone", htmlAttributes: new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.Contacts.Telephone1, new { @class = "form-control", @placeholder = "Enter Telephone" })
+                    @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserAddress.Address1, "Address", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserAddress.Address1, new { htmlAttributes = new {  } })
+            <div class="form-group">
 
-                @Html.HiddenFor(model => model.UserAddressId)
-                @Html.HiddenFor(model => model.UserAddress.AddressId)
-                @Html.HiddenFor(model => model.UserContactId)
-                @Html.HiddenFor(model => model.Contacts.ContactId)
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.Contacts.Mobile1, "Mobile", htmlAttributes: new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.Contacts.Mobile1, new { @class = "form-control", @placeholder = "Enter Mobile" })
+                    @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group">
+
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.UserAddress.Address1, "Address", htmlAttributes: new { @class = "control-label" })
+                    @Html.TextAreaFor(model => model.UserAddress.Address1, new { @class = "form-control", @placeholder = "Enter Address" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
             </div>
         </div>
     </div>
