--- a/LoanManagementSystem/Views/Home/Index.cshtml
+++ b/LoanManagementSystem/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿@{
-    ViewBag.Title = "";
+    ViewBag.Title = "Home Page - Dashboard";
 }
 
-<div class="jumbotron">
-    @*<h1>ASP.NET</h1>*@
-    @*<p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>*@
-    @*<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
-</div>
 
 <div class="row">
-     
+    Dash board goes here
 </div>
