--- a/LoanManagementSystem/Views/User/Edit.cshtml
+++ b/LoanManagementSystem/Views/User/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LoanManagementSystem.Models.sdtoUser
 
 @{
-    ViewBag.Title = "Create User";
+    ViewBag.Title = "Edit User";
 }
 
 @*<h2>Create User</h2>*@
@@ -10,7 +10,7 @@
 @using (Html.BeginForm("Edit", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-        
+
     @Html.HiddenFor(model => model.UserID)
     @Html.HiddenFor(model => model.CreatedBy)
     @Html.HiddenFor(model => model.CreatedOn)
@@ -24,8 +24,8 @@
     @Html.HiddenFor(model => model.PermanentContactId)
     @Html.HiddenFor(model => model.UserGroupId)
 
-    <div class="col-md-5">
-        @Html.ValidationSummary(true)        
+    <div class="col-md-5 form-horizontal">
+        @Html.ValidationSummary(true)
         <div class="form-group">
             <div class="col-md-10">
                 @Html.LabelFor(m => m.Code)
@@ -48,17 +48,24 @@
             </div>
         </div>
         @*<div class="form-group">
-            <div class="col-md-10">
-                @Html.LabelFor(model => model.ConfirmPassword)
-                @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", @placeholder = "Enter Confirm Password" })
-                @Html.ValidationMessageFor(model => model.ConfirmPassword)
-            </div>
-        </div>*@
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.ConfirmPassword)
+                    @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", @placeholder = "Enter Confirm Password" })
+                    @Html.ValidationMessageFor(model => model.ConfirmPassword)
+                </div>
+            </div>*@
         <div class="form-group">
             <div class="col-md-10">
                 @Html.LabelFor(model => model.UserGroupId)
                 @Html.DropDownListFor(model => model.UserGroupId, (SelectList)ViewBag.UserGroupList, htmlAttributes: new { @class = "form-control", @placeholder = "Select User Group" })
                 @Html.ValidationMessageFor(model => model.UserGroupId)
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-10">
+                @Html.LabelFor(model => model.Description)
+                @Html.TextAreaFor(model => model.Description, new { @class = "form-control", @placeholder = "Enter description" })
+                @Html.ValidationMessageFor(model => model.Description)
             </div>
         </div>
     </div>
@@ -77,27 +84,21 @@
                 @Html.ValidationMessageFor(model => model.LastName)
             </div>
         </div>
-        @if (File.Exists(Server.MapPath("~/").Trim("\\/ ".ToCharArray()) + "\\ContentUpload\\User\\Profile\\" + @Model.UserID + ".logo"))
-        {
-            <div class="form-group">               
-                <div class="col-md-10">
-                    <img src="~/Utility/ProfileImage?UserId=@Model.UserID" alt="Logo" style="width:300px; height: 300px" />
-                </div>
-            </div>
-        }
         <div class="form-group">
             <div class="col-md-10">
                 @Html.Label("Profile Image")
+                @if (File.Exists(Server.MapPath("~/").Trim("\\/ ".ToCharArray()) + "\\ContentUpload\\User\\Profile\\" + @Model.UserID + ".logo"))
+                {
+                    @*<div class="form-group">
+                        <div class="col-md-10">*@
+                    <img src="~/Utility/ProfileImage?UserId=@Model.UserID" alt="Profile Image" style="width:200px; height:200px" class="form-control" />
+                    @*</div>
+                        </div>*@
+                }
                 <input name="ProfileImage" type="file" class="form-control" />
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-md-10">
-                @Html.LabelFor(model => model.Description)
-                @Html.TextAreaFor(model => model.Description, new { @class = "form-control", @placeholder = "Enter description" })
-                @Html.ValidationMessageFor(model => model.Description)
-            </div>
-        </div>
+       
         <div class="form-group center-block">
             <div class="col-md-7">
             </div>
