--- a/LoanManagementSystem/Views/Loan/Edit.cshtml
+++ b/LoanManagementSystem/Views/Loan/Edit.cshtml
@@ -13,7 +13,7 @@
         datepc.datepicker({
             format: 'mm-dd-yyyy',
             startDate: '-3d',
-            showOn: "both",
+           // showOn: "both",
             buttonImageOnly: true,
             buttonImage: "calendar.gif",
             buttonText: "Calendar",
