--- a/LoanManagementSystem/Views/LoanRepayments/Create.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Create.cshtml
@@ -4,10 +4,22 @@
     ViewBag.Title = "Add Loan Repayment";
     
 }
-
+<link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
+<script src="~/Scripts/bootstrap-datepicker.js"></script>
 <script language="javascript" type="text/javascript">
 
     $(document).ready(function () {
+        var datepc = $('.datepicker');
+        datepc.datepicker({
+            format: 'mm-dd-yyyy',
+            startDate: '-3d',
+            //showOn: "both",
+            buttonImageOnly: true,
+            buttonImage: "calendar.gif",
+            buttonText: "Calendar",
+            regional: ["en-US"]
+        });
+
         $('#txtRepaymentAmount').keyup(function () {
             $('#lblPendingPrincipalAmount').text((parseFloat($("#hdnPendingPrincipalAmount").val().length == 0 ? 0 : $("#hdnPendingPrincipalAmount").val()) - (parseFloat($('#txtRepaymentAmount').val().length == 0 ? 0 : $('#txtRepaymentAmount').val()) - parseFloat($('#hdnInterestAmount').val().length == 0 ? 0 : $('#hdnInterestAmount').val()))));
         });
@@ -42,6 +54,15 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RepaymentCode, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.RepaymentCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.RepaymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.RepaymentDate, new { @class = "datepicker datefield", placeholder = "Enter Repayment date here..." })
+                @Html.ValidationMessageFor(model => model.RepaymentDate)
             </div>
         </div>
 
