--- a/LoanManagementSystem/Views/LoanRepayments/Edit.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Edit.cshtml
@@ -4,6 +4,24 @@
     ViewBag.Title = "Edit Loan Repayment";
     
 }
+<link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
+<script src="~/Scripts/bootstrap-datepicker.js"></script>
+<script language="javascript" type="text/javascript">
+
+    $(document).ready(function () {
+        var datepc = $('.datepicker');
+        datepc.datepicker({
+            format: 'mm-dd-yyyy',
+            startDate: '-3d',
+            //showOn: "both",
+            buttonImageOnly: true,
+            buttonImage: "calendar.gif",
+            buttonText: "Calendar",
+            regional: ["en-US"]
+        }); 
+    })
+
+</script>
 
 @using (Html.BeginForm())
 {
@@ -25,7 +43,13 @@
                 @Html.ValidationMessageFor(model => model.RepaymentCode, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.RepaymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.RepaymentDate, new { @class = "datepicker datefield", placeholder = "Enter Repayment date here..." })
+                @Html.ValidationMessageFor(model => model.RepaymentDate)
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.PrincipalAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
