--- a/LoanManagementSystem/Views/Deposit/WithdrawAmount.cshtml
+++ b/LoanManagementSystem/Views/Deposit/WithdrawAmount.cshtml
@@ -3,10 +3,22 @@
 @{
     ViewBag.Title = "Withdraw Deposit Amount";
 }
-
+<link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
+<script src="~/Scripts/bootstrap-datepicker.js"></script>
 <script language="javascript" type="text/javascript">
 
     $(document).ready(function () {
+        var datepc = $('.datepicker');
+        datepc.datepicker({
+            format: 'mm-dd-yyyy',
+            startDate: '-3d',
+            //showOn: "both",
+            buttonImageOnly: true,
+            buttonImage: "calendar.gif",
+            buttonText: "Calendar",
+            regional: ["en-US"]
+        });
+
         $('#txtWithdrawAmount').keyup(function () {
             $('#lblBalanceAmount').text((parseFloat($("#hdnBalanceDepositAmount").val()) - (parseFloat($('#txtWithdrawAmount').val()))));
         });
@@ -39,6 +51,15 @@
                 @Html.ValidationMessageFor(model => model.WithdrawalCode, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.WithdrawalDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.WithdrawalDate, new { @class = "datepicker datefield", placeholder = "Enter Withdrawal Date here..." })
+                @Html.ValidationMessageFor(model => model.WithdrawalDate)
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.Label("Available Balance", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
