--- a/LoanManagementSystem/Views/Loan/Index.cshtml
+++ b/LoanManagementSystem/Views/Loan/Index.cshtml
@@ -136,6 +136,13 @@
     </b>
 }
 
+<div class="form-group" style="padding-top:20px;padding-left:250px">
+   
+    <div class="col-md-offset-2 col-md-10">
+        @Html.ActionLink("Export File", "Export", "Loan")
+    </div>
+</div>
+
 @*@Html.Grid(Model).Columns(columns =>
 {
     /* Adding not mapped column, that renders body, using inline Razor html helper */
