Import CSV data

--- a/LoanManagementSystem/Views/Loan/ImportView.cshtml
+++ b/LoanManagementSystem/Views/Loan/ImportView.cshtml
@@ -6,6 +6,8 @@
 
 @using (Html.BeginForm("ImportView", "Loan", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
     <table class="table">
         @if (Model != null)
         {
